# Tenne-Qt

./: .gitignore  AIDetector.pro  CMakeLists.txt  README.md  feedback_dialog.cpp  feedback_dialog.h  feedback_dialog.ui  gitee_reporter.cpp  github_reporter.cpp  github_reporter.h  mainwindow.cpp  mainwindow.h  onnx_inference.cpp  onnx_inference.h  untitled.pro
include/: github_reporter.h
src/: mainwindow.cpp
ui/: mainwindow.ui
